--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "lint": "eslint src/",
+    "lint-fix": "eslint --fix src/",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test:watch": "test --watchAll=true",
+    "test": "react-scripts test --watchAll=false --transformIgnorePatterns \"node_modules/(?!@toolz/allow-react)/\"",
+    "test:coverage": "react-scripts test --coverage --watchAll=false --transformIgnorePatterns \"node_modules/(?!@toolz/allow-react)/\"",
+    "build:prod": "npm run test && npm run lint && npm run build"
   },
   "eslintConfig": {
     "extends": [
